--- a/csharp-hello_world/4-print_integer/4-print_integer.csproj
+++ b/csharp-hello_world/4-print_integer/4-print_integer.csproj
@@ -1,10 +1,11 @@
-using System;
+<Project Sdk="Microsoft.NET.Sdk">
 
-class Program
-{
-    static void Main(string[] args)
-    {
-        int number = 972; // Initialize the number variable
-        Console.WriteLine(number + " Mission Street"); // Print the integer followed by the text
-    }
-}
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>_4_print_integer</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+</Project>
